--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello world from Arizona!</h1>
+    <h1>Hello world from America!</h1>
     <p>Bara Alomari</p>
     <p>Cell number is 12345678</p>
     <p>address is asdasdasdasd</p>
