--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>Bara Alomari</p>
     <p>Cell number is 12345678</p>
     <p>address is asdasdasdasd</p>
+    <p>started learning about Git and Github</p>
     
 </body>
 </html>
