--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hello world from America!</h1>
-    <p>Bara Alomari</p>
+    <h1>Hello world!</h1>
+    <p>Bara</p>
     <p>Cell number is 12345678</p>
     <p>address is asdasdasdasd</p>
     <p>started learning about Git and Github</p>
